fixed compilesource.sh scripts. fixed opengl and libffmpeg run.sh scripts