@@ -1,4 +1,3 @@
 go build -o libhello.dylib  -buildmode=c-shared
 jextract --source -l hello -t org.golang libhello.h
-javac --add-modules jdk.incubator.foreign org/golang/*.java
-
+javac --enable-preview --source=19 org/golang/*.java
